--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <h3>Create an Account</h3>
-<form class="ui form" [formGroup] ="authForm">
+<form (ngSubmit)="onSubmit()" class="ui form" [formGroup] ="authForm">
     <!-- Below comments have been replaced by reusable input component -->
     
     <!-- <div class="field">
@@ -35,15 +35,22 @@
         [control]="authForm.get('passwordConfirmation')"   
     ></app-input>
 
-    <!-- only show the errors div id the user has touched both password fields and ended up with errors -->
+    <!-- only show the errors div if the user has touched both password fields and ended up with errors -->
     <div 
         *ngIf="authForm.get('password').touched &&
-        authForm.get('passwordConfirmation').touched &&
-        authForm.errors" 
+            authForm.get('passwordConfirmation').touched &&
+            authForm.errors
+        " 
         class="ui red basic label"
     >
         <p *ngIf="authForm.errors.passwordsDontMatch">
             Password and Confirm Password must match.
+        </p>
+        <p *ngIf="authForm.errors.noConnection">
+            No internet connection detected, failed to sign up.
+        </p>
+        <p *ngIf="authForm.errors.unknownError">
+            There was an error when signing you up.
         </p>
     </div>
 
@@ -52,5 +59,5 @@
             Submit
         </button>
     </div>
-    {{ authForm.errors | json }}
+    <!-- {{ authForm.errors | json }} -->
 </form>
