adds: last authentication routing. authentication system now complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
                     <a class="ui item" routerLink="/signout" routerLinkActive="active">
                         Sign Out</a>
                 </ng-container>
+                <!-- exact true tells app not to consider all urls beginning with '/' to be active -->
                 <ng-container *ngIf="!(signedin$ | async)">
                     <a class="ui item" routerLink="/" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">
                         Sign In</a>
