--- a/src/app/inbox/email-index/email-index.component.css
+++ b/src/app/inbox/email-index/email-index.component.css
@@ -11,3 +11,14 @@ a.active:before {
     font-size: 20px;
     margin-right: 10px;
 }
+
+.content {
+    width: 90%;
+}
+
+.trim {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%
+}
