--- a/src/app/inbox/email-show/email-show.component.html
+++ b/src/app/inbox/email-show/email-show.component.html
@@ -8,4 +8,7 @@
             To: <i>{{ email.to }}</i>
         </div>
     </div>
+    <div class="ui divider">
+        <div [innerHTML]="email.html"></div>
+    </div>
 </div>
