--- a/src/app/inbox/home/home.component.html
+++ b/src/app/inbox/home/home.component.html
@@ -1,5 +1,8 @@
 <div class="ui grid stackable">
     <div class="five wide column">
+        <app-email-create>
+
+        </app-email-create>
         <app-email-index>
             
         </app-email-index>
@@ -8,3 +11,11 @@
         <router-outlet></router-outlet>
     </div>
 </div>
+
+<!-- <app-modal>
+    <h3 modalTitle>Compose</h3>
+    <p> I'm some content</p>
+    <div modalFooter>
+        <button class="ui primary button">Custom Button</button>
+    </div>
+</app-modal> -->
