--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="ui container">
     <div class="ui secondary pointing menu">
-        <a routerLink="/" class="item">Amgular Email</a>
+        <a routerLink="/" class="item">Angular Email</a>
     
             <div class="right menu">
                 <!-- as soon as signedin$ emits a value, the async pipe will recieve it and recalculate the *ngIf  -->
